--- a/assets/css/audio.css
+++ b/assets/css/audio.css
@@ -10,30 +10,30 @@ div#pre-load-img-container {
     2. Components
   */
 div.top-container {
-    margin-bottom: 40px;
+    margin-bottom: 4.1vw;
     position: relative;
 }
 
 div.top-container div.amplitude-visualization {
-    width: 200px;
-    height: 200px;
-    box-shadow: 0 5px 31px 0 rgba(0, 0, 0, 0.5);
+    width: 20vw;
+    height: 20vw;
+    box-shadow: 0 .3vw 3vw 0 rgba(0, 0, 0, 0.5);
     margin: auto;
     background-color: black;
 }
 
 div.top-container img.now-playing-album-art {
-    width: 200px;
+    width: 20vw;
     margin: auto;
-    box-shadow: 0 5px 31px 0 rgba(0, 0, 0, 0.5);
+    box-shadow: 0 .3vw 3vw 0 rgba(0, 0, 0, 0.5);
     display: none;
 }
 
 div.top-container div.visualization-toggle {
-    width: 24px;
-    height: 24px;
+    width: 2.1vw;
+    height: 2.1vw;
     top: 0;
-    right: 8px;
+    right: 1vw;
     cursor: pointer;
     position: absolute;
 }
@@ -47,11 +47,11 @@ div.top-container div.visualization-toggle.visualization-off {
 }
 
 div.top-container div.amplitude-shuffle {
-    width: 22px;
-    height: 13px;
+    width: 2.2vw;
+    height: 1.3vw;
     cursor: pointer;
-    top: 48px;
-    right: 10px;
+    top: 1.5vw;
+    right: 1vw;
     position: absolute;
 }
 
@@ -64,11 +64,11 @@ div.top-container div.amplitude-shuffle.amplitude-shuffle-off {
 }
 
 div.top-container div.amplitude-repeat {
-    width: 25px;
-    height: 15px;
+    width: 2.5vw;
+    height: 1.5vw;
     cursor: pointer;
-    top: 85px;
-    right: 8px;
+    top: 8.1vw;
+    right: .9vw;
     position: absolute;
 }
 
@@ -90,43 +90,51 @@ div.top-container div.amplitude-repeat.amplitude-repeat-off {
     Large Only
   */
 div.control-container {
-    margin-top: 40px;
+    margin-top: 2.5vw;
     display: flex;
 }
 
 div.control-container div.amplitude-prev {
-    width: 18px;
-    height: 24px;
-    background: url("https://521dimensions.com/img/open-source/amplitudejs/examples/visualizations/prev.svg");
-    background-size: cover;
+    width: 1.6vw;
+    height: 1.6vw;
+    background: url("https://521dimensions.com/img/open-source/amplitudejs/examples/visualizations/prev.svg")no-repeat center;
+    background-size: contain;
     cursor: pointer;
     margin: auto;
-    margin-top: 10px;
+    margin-top: .9vw;
+    max-width: 45px;
+    max-height: 45px;
 }
 
 div.control-container div.amplitude-play-pause {
-    width: 30px;
-    height: 44px;
+    width: 3vw;
+    height: 3vw;
     cursor: pointer;
     margin: auto;
+    max-width: 80px;
+    max-height: 80px;
 }
 
 div.control-container div.amplitude-play-pause.amplitude-playing {
     background: url("https://521dimensions.com/img/open-source/amplitudejs/examples/visualizations/pause.svg") no-repeat center;
+    background-size: contain;
 }
 
 div.control-container div.amplitude-play-pause.amplitude-paused {
     background: url("https://521dimensions.com/img/open-source/amplitudejs/examples/visualizations/play.svg") no-repeat center;
+    background-size: contain;
 }
 
 div.control-container div.amplitude-next {
-    width: 18px;
-    height: 24px;
-    background: url("https://521dimensions.com/img/open-source/amplitudejs/examples/visualizations/next.svg");
-    background-size: cover;
+    width: 1.6vw;
+    height: 1.6vw;
+    background: url("https://521dimensions.com/img/open-source/amplitudejs/examples/visualizations/next.svg")no-repeat center;
+    background-size: contain;
     cursor: pointer;
     margin: auto;
-    margin-top: 10px;
+    margin-top: .9vw;
+    max-width: 45px;
+    max-height: 45px;
 }
 
 /*
@@ -138,15 +146,15 @@ div.control-container div.amplitude-next {
 /*
     Large Only
   */
-div.meta-data-container {
-    margin-top: 40px;
-}
+/* div.meta-data-container {
+    margin-top: 3.9vw;
+} */
 
 div.meta-data-container span.now-playing-name {
     display: block;
     text-align: center;
-    margin-bottom: 15px;
-    font-size: 28px;
+    /* margin-bottom: 1.3vw; */
+    font-size: 2.1vw;
     font-weight: 700;
     color: white;
     white-space: nowrap;
@@ -160,7 +168,7 @@ div.meta-data-container span.now-playing-artist-album {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    font-size: 14px;
+    font-size: 1.2vw;
     color: rgba(255, 255, 255, 0.7);
 }
 
@@ -174,51 +182,52 @@ div.meta-data-container span.now-playing-artist-album {
     Large Only
   */
 div.amplitude-wave-form {
-    margin-top: 25px;
-    margin-bottom: 12px;
+    margin-top: 2vw;
+    margin-bottom: 1.4vw;
 }
 
 div.amplitude-wave-form svg {
-    stroke: url(#gradient);
-    height: 50px;
+    stroke: #fff;
+    height: 5.5vw;
     width: 100%;
-    stroke-width: .5px;
+    stroke-width: 0.034vw;
 }
 
-div.amplitude-wave-form svg g {
+/* div.amplitude-wave-form svg g {
     stroke: url(#gradient);
-    height: 50px;
+    height: 6vw;
     width: 100%;
 }
 
 div.amplitude-wave-form svg g path {
     stroke: url(#gradient);
-    height: 50px;
+    height: 6vw;
     width: 100%;
-}
+} */
 
 span.amplitude-current-time {
     display: block;
     text-align: left;
     color: white;
-    font-size: 12px;
+    font-size: 1.2vw;
 }
 
 span.amplitude-time-remaining {
     display: block;
     text-align: right;
     color: white;
-    font-size: 12px;
+    font-size: 1.2vw;
 }
 
 div.song-navigation {
-    margin-top: 50px;
-    margin-bottom: 25px;
+    margin-top: 5vw;
+    margin-bottom: 2.6vw;
 }
 
 div.song-navigation input[type="range"] {
     width: 90%;
     -webkit-appearance: none;
+    appearance: none;
     z-index: 9999;
     background-color: inherit;
     margin-left: auto;
@@ -232,41 +241,44 @@ div.song-navigation input[type="range"]:focus {
 
 div.song-navigation input[type="range"]::-webkit-slider-runnable-track {
     width: 100%;
-    height: 4px;
+    height: .5vw;
     cursor: pointer;
     border-radius: 0px;
     background: rgba(255, 255, 255, 0.25);
 }
 
 div.song-navigation input[type="range"]::-webkit-slider-thumb {
-    width: 28px;
-    height: 28px;
-    background-color: white;
-    border-radius: 20px;
+    width: 2.5vw;
+    height: 2.5vw;
+    background-color: #69bddc;
+    border: .4vw solid #fff;
+    border-radius: 2vw;
     -webkit-appearance: none;
-    margin-top: -10px;
+    appearance: none;
+    margin-top: -1vw;
 }
 
 div.song-navigation input[type="range"]::-moz-range-track {
     width: 100%;
-    height: 4px;
+    height: .5vw;
     cursor: pointer;
     border-radius: 0px;
     background: rgba(255, 255, 255, 0.25);
 }
 
 div.song-navigation input[type="range"]::-moz-range-thumb {
-    width: 28px;
-    height: 28px;
+    width: 2.8vw;
+    height: 2.8vw;
     background-color: white;
-    border-radius: 20px;
+    border-radius: 2vw;
     -webkit-appearance: none;
-    margin-top: -10px;
+    appearance: none;
+    margin-top: -1vw;
 }
 
 div.song-navigation input[type="range"]::-ms-track {
     width: 100%;
-    height: 4px;
+    height: .4vw;
     cursor: pointer;
     border-radius: 0px;
     background: rgba(255, 255, 255, 0.25);
@@ -281,12 +293,13 @@ div.song-navigation input[type="range"]::-ms-fill-upper {
 }
 
 div.song-navigation input[type="range"]::-ms-thumb {
-    width: 28px;
-    height: 28px;
-    background-color: white;
-    border-radius: 20px;
+    width: 2.8vw;
+    height: 2.8vw;
+    background-color: red;
+    border-radius: 2vw;
     -webkit-appearance: none;
-    margin-top: -10px;
+    appearance: none;
+    margin-top: -1vw;
 }
 
 div.arrow-up img.arrow-up-icon {
@@ -297,10 +310,11 @@ div.arrow-up img.arrow-up-icon {
 
 input[type="range"]#global-large-song-slider {
     width: 100%;
-    margin-top: -74px;
+    margin-top: -7.5vw;
     -webkit-appearance: none;
+    appearance: none;
     z-index: 9999;
-    background-color: inherit;
+    background-color: rgb(255, 255, 255, .1);
     margin-left: auto;
     margin-right: auto;
     display: block;
@@ -314,16 +328,16 @@ input[type="range"]#global-large-song-slider::-webkit-slider-runnable-track {
     width: 100%;
     cursor: pointer;
     border-radius: 0px;
-    height: 68px;
+    height: 5.5vw;
     background-color: rgba(0, 0, 0, 0);
     -webkit-appearance: none;
 }
 
 input[type="range"]#global-large-song-slider::-webkit-slider-thumb {
-    width: 5px;
-    height: 68px;
-    background-color: white;
-    border-radius: 20px;
+    width: .5vw;
+    height: 5.5vw;
+    background-color: #fff;
+    border-radius: 2vw;
     -webkit-appearance: none;
 }
 
@@ -332,22 +346,23 @@ input[type="range"]#global-large-song-slider::-moz-range-track {
     height: 0px;
     cursor: pointer;
     border-radius: 0px;
-    height: 68px;
+    height: 5.5vw;
     background-color: rgba(0, 0, 0, 0);
 }
 
 input[type="range"]#global-large-song-slider::-moz-range-thumb {
-    width: 5px;
-    height: 68px;
+    width: .5vw;
+    height: 5.5vw;
     background-color: white;
-    border-radius: 20px;
+    border-radius: 2vw;
     -webkit-appearance: none;
-    margin-top: -34px;
+    appearance: none;
+    margin-top: -3.1vw;
 }
 
 input[type="range"]#global-large-song-slider::-ms-track {
     width: 100%;
-    height: 4px;
+    height: .3vw;
     cursor: pointer;
     border-radius: 0px;
     background: rgba(255, 255, 255, 0.25);
@@ -362,25 +377,28 @@ input[type="range"]#global-large-song-slider::-ms-fill-upper {
 }
 
 input[type="range"]#global-large-song-slider::-ms-thumb {
-    width: 28px;
-    height: 28px;
+    width: 2.5vw;
+    height: 2.5vw;
     background-color: white;
-    border-radius: 20px;
+    border-radius: 2vw;
     -webkit-appearance: none;
-    margin-top: -10px;
+    appearance: none;
+    margin-top: -1vw;
 }
 
 /*
     3. Layout
   */
 div#visualizations-player {
-    width: 325px;
-    padding: 25px;
-    background-color: #482D57;
-    border-radius: 20px;
+    width: calc(100% - 1vw);
+    padding: .5vw;
+    background-color: rgb(255, 255, 255, .05);
+    border-radius: 1vw;
     margin: auto;
-    margin-top: 50px;
+    /* margin-top: 50px; */
     position: relative;
+    backdrop-filter: blur(1px);
+    min-height: 26.5vw;
 }
 
 /*
@@ -394,14 +412,14 @@ div#visualizations-player {
   */
 div#visualizations-player-playlist {
     background-color: #482D57;
-    border-radius: 20px;
+    border-radius: 2vw;
     position: absolute;
     top: 0;
     bottom: 0;
     right: 0;
     left: 0;
-    padding: 25px;
-    padding-top: 25px;
+    padding: 2.4vw;
+    padding-top: 2.4vw;
     z-index: 9999;
     display: none;
 }
@@ -415,21 +433,21 @@ div#visualizations-player-playlist div.top-arrow img {
 }
 
 div#visualizations-player-playlist div.top {
-    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+    border-bottom: .1vw solid rgba(255, 255, 255, 0.2);
 }
 
 div#visualizations-player-playlist div.top span.playlist-title {
     color: white;
-    font-size: 36px;
+    font-size: 3.1vw;
     font-weight: 700;
 }
 
 div#visualizations-player-playlist div.top div.amplitude-shuffle {
-    width: 22px;
-    height: 13px;
+    width: 2vw;
+    height: 1.2vw;
     cursor: pointer;
     float: right;
-    margin-top: 22px;
+    margin-top: 2vw;
 }
 
 div#visualizations-player-playlist div.top div.amplitude-shuffle.amplitude-shuffle-on {
@@ -441,12 +459,12 @@ div#visualizations-player-playlist div.top div.amplitude-shuffle.amplitude-shuff
 }
 
 div#visualizations-player-playlist div.top div.amplitude-repeat {
-    width: 25px;
-    height: 15px;
+    width: 2.4vw;
+    height: 1.5vw;
     cursor: pointer;
     float: right;
-    margin-left: 25px;
-    margin-top: 20px;
+    margin-left: 2.4vw;
+    margin-top: 2vw;
 }
 
 div#visualizations-player-playlist div.top div.amplitude-repeat.amplitude-repeat-on {
@@ -458,17 +476,17 @@ div#visualizations-player-playlist div.top div.amplitude-repeat.amplitude-repeat
 }
 
 div#visualizations-player-playlist div.songs-container {
-    padding-top: 35px;
-    height: 400px;
-    padding-bottom: 90px;
+    padding-top: 3.3vw;
+    height: 40vw;
+    padding-bottom: 8.8vw;
     overflow-y: scroll;
 }
 
 div#visualizations-player-playlist div.songs-container div.song {
-    margin-bottom: 20px;
+    margin-bottom: 2vw;
     cursor: pointer;
-    padding: 5px;
-    border-radius: 3px;
+    padding: .3vw;
+    border-radius: .15vw;
 }
 
 div#visualizations-player-playlist div.songs-container div.song.amplitude-active-song-container {
@@ -481,27 +499,27 @@ div#visualizations-player-playlist div.songs-container div.song:hover {
 
 div#visualizations-player-playlist div.songs-container div.song span.song-position {
     color: white;
-    font-size: 18px;
+    font-size: 1.6vw;
     float: left;
 }
 
 div#visualizations-player-playlist div.songs-container div.song img.song-album-art {
-    width: 44px;
-    height: 44px;
-    border-radius: 4px;
-    box-shadow: 0 2px 7px 0 rgba(0, 0, 0, 0.5);
+    width: 4.2vw;
+    height: 4.2vw;
+    border-radius: .2vw;
+    box-shadow: 0 .1vw .5vw 0 rgba(0, 0, 0, 0.5);
     float: left;
-    margin-left: 12px;
-    margin-right: 16px;
+    margin-left: 1.1vw;
+    margin-right: 1.4vw;
 }
 
 div#visualizations-player-playlist div.songs-container div.song div.song-meta-data-container {
     float: left;
-    width: calc(100% - 105px);
+    width: calc(100% - 10.3vw);
 }
 
 div#visualizations-player-playlist div.songs-container div.song div.song-meta-data-container span.song-name {
-    font-size: 18px;
+    font-size: 1.6vw;
     display: block;
     color: white;
     white-space: nowrap;
@@ -510,7 +528,7 @@ div#visualizations-player-playlist div.songs-container div.song div.song-meta-da
 }
 
 div#visualizations-player-playlist div.songs-container div.song div.song-meta-data-container span.song-artist {
-    font-size: 12px;
+    font-size: 1.1vw;
     display: block;
     color: white;
     white-space: nowrap;
@@ -530,31 +548,31 @@ div#visualizations-player-playlist div.active-audio {
     left: 0;
     right: 0;
     bottom: 0;
-    height: 40px;
-    border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    padding-left: 25px;
-    padding-right: 25px;
+    height: 3.9vw;
+    border-bottom-left-radius: 2vw;
+    border-bottom-right-radius: 2vw;
+    padding-top: 2vw;
+    padding-bottom: 2vw;
+    padding-left: 2.4vw;
+    padding-right: 2.4vw;
     display: flex;
 }
 
 div#visualizations-player-playlist div.active-audio img.cover-art-small {
-    width: 50px;
-    height: 50px;
-    border-radius: 4px;
+    width: 6vw;
+    height: 6vw;
+    border-radius: .2vw;
     float: left;
 }
 
 div#visualizations-player-playlist div.active-audio div.active-audio-right {
     float: left;
-    width: calc(100% - 50px);
-    padding-left: 10px;
+    width: calc(100% - 6vw);
+    padding-left: .9vw;
 }
 
 div#visualizations-player-playlist div.active-audio div.active-audio-right span.song-name {
-    font-size: 16px;
+    font-size: 1.4vw;
     color: white;
     display: block;
     text-align: center;
@@ -569,20 +587,20 @@ div#visualizations-player-playlist div.active-audio div.active-audio-right div.a
 }
 
 div#visualizations-player-playlist div.active-audio div.active-audio-right div.active-audio-controls div.amplitude-prev {
-    width: 18px;
-    height: 26px;
+    width: 1.6vw;
+    height: 2.4vw;
     display: inline-block;
     background-size: contain;
     background: url(https://521dimensions.com/img/open-source/amplitudejs/examples/visualizations/prev.svg) no-repeat center;
-    margin-right: 20px;
+    margin-right: 2vw;
     vertical-align: middle;
     cursor: pointer;
 }
 
 div#visualizations-player-playlist div.active-audio div.active-audio-right div.active-audio-controls div.amplitude-play-pause {
     display: inline-block;
-    width: 24px;
-    height: 25px;
+    width: 2.2vw;
+    height: 2.4vw;
     cursor: pointer;
     margin: auto;
     vertical-align: middle;
@@ -599,28 +617,24 @@ div#visualizations-player-playlist div.active-audio div.active-audio-right div.a
 }
 
 div#visualizations-player-playlist div.active-audio div.active-audio-right div.active-audio-controls div.amplitude-next {
-    width: 18px;
-    height: 26px;
+    width: 1.6vw;
+    height: 2.4vw;
     display: inline-block;
     background-size: contain;
     background: url(https://521dimensions.com/img/open-source/amplitudejs/examples/visualizations/next.svg) no-repeat center;
-    margin-left: 20px;
+    margin-left: 2vw;
     vertical-align: middle;
     cursor: pointer;
 }
 
-a.learn-more {
-    display: block;
-    color: white;
-    text-align: center;
-    width: 300px;
-    border-radius: 5px;
-    text-decoration: none;
-    padding: 10px;
-    margin: auto;
-    margin-top: 20px;
-    background-color: #482D57;
+
+@media only screen and (max-width:768px) {
+    div.amplitude-wave-form svg {
+        /* height: 4.5vw; */
+        stroke-width: .05vw;
+    }
 }
+
 
 /*
     Small only
